fix overflow: hidden; remove

--- a/app/backgroundprofile.css
+++ b/app/backgroundprofile.css
@@ -1,16 +1,4 @@
-  
-  body {
-    display: table;
-    width: 100%;
-    height: 100%;
-    background-color: #111;
-    color: #f2f2f2; 
-    line-height: 1.6;
-    position: relative;
-    font-family: sans-serif;
-    overflow: hidden;
-  }
-  
+    
   .lines {
     position: absolute;
     top: 0;
